verif/test/deca/syntax/invalid/invalid-malformed-number-verif.res
src/test/deca/syntax/invalid/invalid-malformed-number.deca:11:16: mismatched input '7.6' expecting IDENT
